# acfunlive-neotool

./: .eslintignore  .gitignore  Cargo.toml  build_deps.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: push.yml
apps/ai_chat/: neotool.app.json  package.json  tailwind.config.js  tsconfig.json
apps/ai_chat/src/: App.svelte
apps/ai_chat/src/components/: KeyDialog.svelte  Log.svelte
apps/ai_chat/src/scripts/: chat.ts
apps/danmaku_keyboard/: index.css  index.js  neotool.json  package.json  rollup.config.js
apps/danmaku_keyboard/src/: App.svelte  Input.svelte  Key.svelte  key.ts
apps/danmaku_keyboard/src/components/: Input.svelte  Key.svelte
apps/danmaku_keyboard/src/scripts/: key.ts
apps/danmaku_sticker/: index.css  index.js  neotool.app.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/danmaku_sticker/src/: App.svelte
apps/danmaku_sticker/src/components/: Pick.svelte  Sticker.svelte
apps/danmaku_sticker/src/scripts/: data.ts
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/xunfei/: Cargo.toml
crates/xunfei/src/: lib.rs
plugins/audio/: Cargo.toml  README.md  package.json  rollup.config.js
plugins/audio/guest-js/: index.ts
plugins/audio/src/: lib.rs
plugins/base/: Cargo.toml  package.json
plugins/base/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/base/guest-js/: index.ts
plugins/base/src/: lib.rs
plugins/keyboard/: Cargo.toml  README.md  package.json
plugins/keyboard/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/keyboard/guest-js/: index.ts
plugins/keyboard/src/: key.rs  lib.rs
plugins/serve_file/: Cargo.toml  README.md  package.json
plugins/serve_file/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/serve_file/guest-js/: index.ts
plugins/serve_file/src/: lib.rs
plugins/serve_files/: Cargo.toml  README.md  package.json
plugins/serve_files/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/serve_files/guest-js/: index.ts
plugins/serve_files/src/: lib.rs
plugins/spark/: Cargo.toml  README.md  package.json  tsconfig.json
plugins/spark/guest-js/: index.ts
plugins/spark/src/: data.rs  lib.rs
plugins/tauri-plugin-acfunlive-neotool-base/: Cargo.toml  README.md  package.json  tsconfig.json
plugins/tauri-plugin-acfunlive-neotool-base/dist-js/: index.mjs
plugins/tauri-plugin-acfunlive-neotool-base/guest-js/: index.ts
plugins/tauri-plugin-acfunlive-neotool-base/src/: lib.rs
plugins/tauri-plugin-acfunlive-neotool-keyboard/: Cargo.toml  package.json
plugins/tauri-plugin-acfunlive-neotool-keyboard/src/: lib.rs
plugins/tts/: Cargo.toml  README.md  package.json
plugins/tts/guest-js/: index.ts
plugins/tts/src/: data.rs  lib.rs
