[workspace]
members = ["packages/neotool/src-tauri", "plugins/*"]
resolver = "2"

[workspace.package]
authors = ["orzogc"]
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.60"

[workspace.dependencies]
once_cell = "1.18.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
