[package]
name = "acfunlive-neotool-audio"
version = "0.1.0"
description = "acfunlive-neotool audio library"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
once_cell.workspace = true
tokio = { version = "1.34.0", features = ["sync"] }
