[package]
name = "tauri-plugin-acfunlive-neotool-base"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = "acfunlive-neotool tauri base plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
dunce = "1.0.4"
serde.workspace = true
serde_json.workspace = true
sha256 = "1.4.0"
tauri = { version = "1.5.2" }
thiserror.workspace = true
tokio = { version = "1.33.0", features = ["fs"] }
