[package]
name = "tauri-plugin-acfunlive-neotool-base"
version = "0.1.0"
description = "acfunlive-neotool tauri base plugin"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dunce = "1.0.4"
keyring = "2.0.5"
serde.workspace = true
serde_json.workspace = true
sha256 = "1.4.0"
tauri = { version = "1.5.2" }
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["fs"] }
