[package]
name = "tauri-plugin-acfunlive-neotool-keyboard"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = "acfunlive-neotool tauri keyboard plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
device_query = "1.1.3"
enigo = { version = "0.1.2", features = ["with_serde"] }
once_cell = "1.18.0"
serde.workspace = true
tauri = { version = "1.4.1" }
tokio = { version = "1.32.0", features = ["sync"] }
