[package]
name = "tauri-plugin-acfunlive-neotool-keyboard"
version = "0.1.0"
description = "acfunlive-neotool tauri keyboard plugin"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
device_query = "1.1.3"
enigo = { version = "0.1.3", features = ["with_serde"] }
once_cell.workspace = true
serde.workspace = true
tauri = { version = "1.5.2" }
tokio = { version = "1.34.0", features = ["sync"] }
