[package]
name = "tauri-plugin-acfunlive-neotool-serve-files"
version = "0.1.0"
description = "acfunlive-neotool tauri plugin for serving html files"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
file-serve = "0.3.0"
once_cell.workspace = true
serde.workspace = true
tauri = { version = "1.5.2" }
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["sync"] }
