[package]
name = "tauri-plugin-acfunlive-neotool-spark"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = "acfunlive-neotool tauri plugin for XunFei spark AI model"
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.21.5"
futures-util = { version = "0.3.29", features = ["sink"] }
hmac-sha256 = "1.1.7"
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.17"
tauri = { version = "1.5.2" }
thiserror.workspace = true
time = { version = "0.3.30", features = ["formatting"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-native-roots",
] }
url = "2.4.1"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
