[package]
name = "tauri-plugin-acfunlive-neotool-spark"
version = "0.1.0"
description = "acfunlive-neotool tauri plugin for XunFei spark AI model"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
acfunlive-neotool-xunfei = { version = "0.1.0", path = "../../crates/xunfei" }
futures-util = { version = "0.3.29", features = ["sink"] }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.17"
tauri = { version = "1.5.2" }
thiserror.workspace = true
time = { version = "0.3.30" }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-native-roots",
] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
