[package]
name = "tauri-plugin-acfunlive-neotool-base"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = "acfunlive-neotool tauri base plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1.4.1" }
thiserror.workspace = true
tokio = { version = "1.31.0", features = ["fs"] }
