[package]
name = "tauri-plugin-acfunlive-neotool-tts"
version = "0.1.0"
description = "acfunlive-neotool tauri plugin for XunFei TTS"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.21.5"
futures-util = { version = "0.3.29", features = ["sink"] }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.17"
tauri = { version = "1.5.2" }
thiserror.workspace = true
time = { version = "0.3.30" }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-native-roots",
] }
acfunlive-neotool-xunfei = { version = "0.1.0", path = "../../crates/xunfei" }
acfunlive-neotool-audio = { version = "0.1.0", path = "../../crates/audio" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
